Adding SaveGames method.